@@ -1,6 +1,9 @@
 Release 0.6.3 (in development)
 ==============================
 
+* #252: Make it easier to change the build dir in the Makefiles
+  generated by quickstart.
+
 * #220: Fix CSS so that displaymath really is centered.
 
 * #222: Allow the "Footnotes" header to be translated.
